--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passport-saml",
-  "version": "1.2.0",
+  "version": "1.3.3",
   "license": "MIT",
   "keywords": [
     "saml",
@@ -26,6 +26,7 @@
     "url": "https://github.com/bergie/passport-saml.git"
   },
   "main": "./lib/passport-saml",
+  "types": "index.d.ts",
   "dependencies": {
     "debug": "^3.1.0",
     "passport-strategy": "*",
